<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>catch_ros2</name>
  <version>0.2.1</version>
  <description>Catch2 testing framework for ROS 2 unit and integration tests.</description>
  <maintainer email="ngmorales97@gmail.com">Nick Morales</maintainer>
  <license>Apache License 2.0</license>
  <author email="ngmorales97@gmail.com">Nick Morales</author>
  <author email="elwin@northwestern.edu">Matthew Elwin</author>
  <author email="yinhang0226@gmail.com">Hang-Yin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2launch</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
